--- a/src/app/modules/career-succession/profile-details/profile-details.component.html
+++ b/src/app/modules/career-succession/profile-details/profile-details.component.html
@@ -21,17 +21,17 @@
 
             <div class="col-md-4 col-lg-4 col-sm-6">
               <span
-                style="font-weight: 600; padding-right:25px;">Department:</span><span>{{employeeData.contracts.departmentName}}</span>
+                style="font-weight: 600; padding-right:25px;">Department:</span><span>{{employeeContractData.departmentName}}</span>
             </div>
 
             <div class="col-md-4 col-lg-4 col-sm-6">
-              <span style="font-weight: 600; padding-right:25px;">Level:</span><span>{{employeeData.contracts.gradeName}}</span>
+              <span style="font-weight: 600; padding-right:25px;">Level:</span><span>{{employeeContractData.gradeName}}</span>
             </div>
           </div>
 
           <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="col-md-4 col-lg-4 col-sm-6">
-              <span style="font-weight: 600; padding-right:25px;">Job Title:</span><span>{{employeeData.contracts.jobId }}</span>
+              <span style="font-weight: 600; padding-right:25px;">Job Title:</span><span>{{employeeContractData.jobId }}</span>
             </div>
 
             <!-- <div class="col-md-4 col-lg-4 col-sm-6">
@@ -39,7 +39,7 @@
             </div> -->
 
             <div class="col-md-4 col-lg-4 col-sm-6">
-              <span style="font-weight: 600; padding-right:25px;">Location:</span><span>{{employeeData.contracts.locationId}}</span>
+              <span style="font-weight: 600; padding-right:25px;">Location:</span><span>{{employeeContractData.locationId}}</span>
             </div>
           </div>
         </div>
