--- a/src/app/components/cal/cal.component.scss
+++ b/src/app/components/cal/cal.component.scss
@@ -2,3 +2,13 @@
     font-weight: 300;
     color: yellow;
 }
+
+.today{
+    background-color: rgb(0, 94, 255);
+    color: white;
+}
+
+.selectedDay{
+    background-color: cadetblue;
+    color: white;
+}
