--- a/src/app/modules/benefit/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/benefit/pages/dashboard/dashboard.component.html
@@ -124,7 +124,7 @@
   </div>
   <div style="margin: 0.5rem;"></div>
   <ngx-componentsheader
-    pageName="Budget Items"
+    pageName="Benefit Coverages"
     [requiredButton]="topActionButtons"
   ></ngx-componentsheader>
 
