--- a/src/app/components/cal/cal.component.html
+++ b/src/app/components/cal/cal.component.html
@@ -1,44 +1,174 @@
 <div style="display: flex; flex-direction: row;flex-wrap: wrap;">
-    <div style="margin-right: 0.3rem; font-weight: bolder; font-size: larger;" >
+    <div style="margin-right: 0.3rem; font-weight: bolder; font-size: larger;">
 
         {{monthLabel}} - {{year}}
     </div>
 
     <div>
         <button (click)="prevMonth()">Prev</button><button (click)="nextMonth()">Next</button>
-        <span> 
+        <span>
             <button (click)="gotoThisMonth()">Today</button></span>
     </div>
- 
+
 </div>
 
 <nb-card>
     <nb-card-body>
-        
-<table style="padding: 2rem; margin-top: 2rem;  border-collapse: collapse;
-border-spacing: 0;
-font-size: 1em; " >
-    <tr>
-        <th *ngFor="let day of days" style="box-sizing: border-box;">
-            <div style="padding: 2px; border: 1px solid black; ">
-                {{day.name}}
-            </div>
-           
-        </th>
-    </tr>
 
-    <tbody>
-        <tr *ngFor="let week of weeks">
-            <td *ngFor="let day of week" (click)='dateClicked(day)' [class]="{'other-month': day.getMonth() !== month}">
+        <table style="padding: 2rem; margin-top: 2rem;  border-collapse: collapse; border-spacing: 0; font-size: 1em; ">
+            <tr>
+                <th *ngFor="let day of days" style="box-sizing: border-box;">
+                    <div style="padding: 4px; border: 1px solid gray; min-height: 100% ;border-spacing: 3rem ; display: flex;
+                 border-width: 3rem;" >
+                        {{day.name}}
+                    </div>
+
+                </th>
+            </tr>
+
+            <tbody>
+                <tr *ngFor="let week of weeks">
+                    <td *ngFor="let day of week" (click)='dateClicked(day)'
+                        [class]="{'other-month': day.getMonth() !== month, today: day.isToday, selectedDay: day == selectedDay}">
+
+                        <div style=" border: 1px solid black; 
+                 min-height: 100%; padding: 4px;position: relative;z-index: 4; vertical-align: top; display: flex; flex-direction: row-reverse; ">
+                            {{day.getDate()}}
+                            <span *ngIf='day.hasEvent'>
+                            <div class="" style="font-weight: bolder;font-size: larger; color: red;" >
+                                ..
+                            </div>
+                            </span>
+                        </div>
+                    </td>
+                </tr>
                 
-                <div style=" border: 1px solid black; 
-                 min-height: 100%; padding: 4px;position: relative;z-index: 4; vertical-align: top;    display: flex;
-    flex-direction: row-reverse; " >
-                    {{day.getDate()}}
-                </div>
-            </td>
-        </tr>
-    </tbody>
-</table>
+                    <!-- <td colspan="10">
+                        <div *ngIf='selectedDay'>
+                            <div style="display: flex; text-align: center; justify-content: center; font-size: larger; font-weight: bold;
+                            margin-top: 2rem;">
+                                Created Events
+                            </div>
+
+                            <table class="responsive-table" style="margin-top: 2rem;">
+
+                                <thead>
+                                    <tr>
+                                        <th>Title</th>
+                                        <th>Start Date</th>
+                                        <th>End Date</th>
+                                        <th>Description</th>
+
+                                    </tr>
+                                </thead>
+
+                                <tbody>
+                                    <tr *ngFor='let event of selectedDay.events; index as i' style="padding: 0.5rem;">
+                                        <td>
+                                            <span> {{event.title}}</span>
+
+                                        </td>
+                                        <td>
+                                            <span> {{event.start | date:'medium'}}</span>
+
+                                        </td>
+                                        <td> <span> {{event.end | date:'medium'}}</span>
+
+                                        </td>
+                                        <td>
+                                            <span style="margin-left: 0.5rem;"> {{event.description}}</span>
+                                        </td>
+                                        <a class="action-btn">
+                                            <i class="fas fa-ellipsis-h"></i>
+                                        </a>
+
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                        </div> -->
+
+
+
+
+                        <td colspan="10">
+                            <div class="row " *ngIf='selectedDay'>
+                                <div class="col s12 m6">
+                                    <div style="display: flex; text-align: center; justify-content: center; font-size: larger; font-weight: bold;
+                                    margin-top: 2rem;margin-bottom: 2rem;">
+                                        Created Events
+                                    </div>
+                                    <table class="responsive-table">
+                                        <thead>
+                                            
+                                                <tr>
+                                                    <th>Title</th>
+                                                    <th>Start Date</th>
+                                                    <th>End Date</th>
+                                                    <th>Description</th>
+            
+                                                </tr>
+    
+                                            
+                                        </thead>
+    
+                                        <tbody>
+                                            
+                                                
+                                                <tr *ngFor='let event of selectedDay.events; index as i' style="padding: 0.5rem;">
+                                                    <td style="margin-right: 0.5rem;">
+                                                        {{event.title}}
+            
+                                                    </td>
+                                                    <td>
+                                                 {{event.start | date:'medium'}}
+            
+                                                    </td>
+                                                    <td> 
+                                                         {{event.end | date:'medium'}}
+            
+                                                    </td>
+                                                    <td>
+                                                         {{event.description}}
+                                                    </td>
+                                                    <a class="action-btn">
+                                                        <i class="far fa-trash-alt" style="cursor: pointer; " (click)="deleteEvent(event.id)"></i>
+                                                    </a>
+                                                </tr>
+                                            
+    
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </td>
+                        
+                    
+                        <!-- 
+                            <li *ngFor='let event of selectedDay.events; index as i'>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        {{event.title}}
+                                    </div>
+                                    <div class="col-sm-3">
+                                        {{event.start}}
+                                    </div>
+                                    <div class="col-sm-3">
+                                        {{event.end}}
+                                    </div>
+                                    <div class="col-sm-2">
+                                        {{event.description}}
+                                    </div>
+                                    <div class="col-sm-1">
+                                        <i class="fas fa-ellipsis-h"></i>
+                                    </div>
+                                </div>
+                                {{event|json}}
+                            </li> -->
+
+                    
+                
+            </tbody>
+        </table>
     </nb-card-body>
 </nb-card>
