--- a/src/app/modules/career-succession/succession-dashboard/succession-dashboard.component.html
+++ b/src/app/modules/career-succession/succession-dashboard/succession-dashboard.component.html
@@ -29,7 +29,7 @@
       <div class="form-group row">
        <div class="col">
         <label>Employee</label>
-        <!-- <input type="text" name="employee" #employee="ngModel" [(ngModel)]="newSuccessionPlan.employeeName" disabled> -->
+        <input type="text" name="employee" #employee="ngModel" [(ngModel)]="newSuccessionPlan.holderId" disabled>
        </div>
       </div>
 
@@ -61,7 +61,7 @@
        <div class="form-group row">
         <div class="col">
          <label>Purpose</label>
-         <select type="text" name="purpose" disabled>
+         <select type="text" name="purpose" #purpose="ngModel" [(ngModel)]="newSuccessionPlan.planJustification" disabled>
           <option value="">--Select--</option>
           <option value=""></option>
         </select>
