--- a/src/app/modules/career-succession/profile-details/profile-details.component.html
+++ b/src/app/modules/career-succession/profile-details/profile-details.component.html
@@ -60,13 +60,13 @@
         <div class="col-md-6">
 
           <span class="title" style="font-size: large; font-weight: bold;">Qualifications</span>
-          <!-- <div *ngFor="let qualification of myQualifications">
+          <div *ngFor="let qualification of myQualifications">
             <div style="padding: 5px;"></div>
             <div style="display: flex; flex-direction: column; justify-self: center;">
               <span class="title">{{qualification.name}}</span>
               <span class="date">From {{qualification.startDate | date:'MMM d, y'}} - {{qualification.endDate | date:'MMM
                 d, y'}}</span>
-            </div> -->
+            </div>
           </div>
 
           <!-- <div style="padding: 15px;"></div> -->
@@ -75,11 +75,11 @@
         <div class="col-md-6">
           <span class="title" style="font-size: large; font-weight: bold;">Certifications</span>
           <div style="padding: 5px;"></div>
-          <!-- <div style="display: flex; flex-direction: column; justify-self: center;"
+          <div style="display: flex; flex-direction: column; justify-self: center;"
             *ngFor="let certification of myCertifications">
             <span><i class="fas fa-circle"
                 style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>{{certification.professionalBodyId}}</span>
-          </div> -->
+          </div>
         </div>
       </div>
 
@@ -97,10 +97,10 @@
       <div class="col-sm-6">
         <span class="title" style="font-size: large; font-weight: bold;">Skills</span>
         <div style="padding: 5px;"></div>
-        <!-- <div style="display: flex; flex-direction: column; justify-self: center;" *ngFor="let skill of mySkills">
+        <div style="display: flex; flex-direction: column; justify-self: center;" *ngFor="let skill of mySkills">
           <span>{{skill.name}}</span>
           <nb-progress-bar [value]="skill.point" size="tiny" status="primary"></nb-progress-bar>
-        </div> -->
+        </div>
 
       </div>
     </div>
